; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/leds/extr_leds-cobalt-raq.c_raq_power_off_led_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/leds/extr_leds-cobalt-raq.c_raq_power_off_led_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.led_classdev = type { i32 }

@led_value_lock = common dso_local global i32 0, align 4
@LED_POWER_OFF = common dso_local global i32 0, align 4
@led_value = common dso_local global i32 0, align 4
@led_port = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.led_classdev*, i32)* @raq_power_off_led_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @raq_power_off_led_set(%struct.led_classdev* %0, i32 %1) #0 {
  %3 = alloca %struct.led_classdev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.led_classdev* %0, %struct.led_classdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* %5, align 8
  %7 = call i32 @spin_lock_irqsave(i32* @led_value_lock, i64 %6)
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32, i32* @LED_POWER_OFF, align 4
  %12 = load i32, i32* @led_value, align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* @led_value, align 4
  br label %19

14:                                               ; preds = %2
  %15 = load i32, i32* @LED_POWER_OFF, align 4
  %16 = xor i32 %15, -1
  %17 = load i32, i32* @led_value, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* @led_value, align 4
  br label %19

19:                                               ; preds = %14, %10
  %20 = load i32, i32* @led_value, align 4
  %21 = load i32, i32* @led_port, align 4
  %22 = call i32 @writeb(i32 %20, i32 %21)
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @spin_unlock_irqrestore(i32* @led_value_lock, i64 %23)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @writeb(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
